Revert "Merge branch 'master' into 6.15"
This reverts commit 717e31e112cec4107a427e636ad78aa7d85d1881, reversing
changes made to 3aaa6423d35bd10f6a145f602e64d5cdbb36c658.