@@ -4,19 +4,12 @@ import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.Serializable;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
@@ -27,19 +20,21 @@ import javax.ejb.Singleton;
 import javax.ejb.Timeout;
 import javax.ejb.TimerConfig;
 import javax.ejb.TimerService;
+import javax.ejb.TransactionManagement;
+import javax.ejb.TransactionManagementType;
 import javax.enterprise.event.Observes;
+import javax.enterprise.event.TransactionPhase;
 import javax.enterprise.inject.Instance;
 import javax.inject.Inject;
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
 import javax.persistence.PersistenceContextType;
+import javax.transaction.UserTransaction;
 
 import org.apache.commons.collections.CollectionUtils;
-import org.apache.maven.model.Build;
 import org.apache.maven.model.Dependency;
 import org.apache.maven.model.Model;
 import org.apache.maven.model.Repository;
-import org.apache.maven.model.RepositoryPolicy;
 import org.apache.maven.model.io.xpp3.MavenXpp3Writer;
 import org.apache.maven.repository.internal.MavenRepositorySystemUtils;
 import org.eclipse.aether.DefaultRepositorySystemSession;
@@ -52,13 +47,13 @@ import org.meveo.commons.utils.FileUtils;
 import org.meveo.commons.utils.ParamBean;
 import org.meveo.commons.utils.StringUtils;
 import org.meveo.event.qualifier.Created;
+import org.meveo.event.qualifier.Removed;
 import org.meveo.event.qualifier.Updated;
 import org.meveo.jpa.EntityManagerWrapper;
 import org.meveo.jpa.MeveoJpa;
 import org.meveo.model.git.GitRepository;
 import org.meveo.model.persistence.JacksonUtil;
 import org.meveo.model.scripts.MavenDependency;
-import org.meveo.model.scripts.ScriptInstance;
 import org.meveo.model.storage.RemoteRepository;
 import org.meveo.security.CurrentUser;
 import org.meveo.security.MeveoUser;
@@ -68,10 +63,7 @@ import org.meveo.service.aether.ConsoleRepositoryListener;
 import org.meveo.service.aether.ManualRepositorySystemFactory;
 import org.meveo.service.git.GitClient;
 import org.meveo.service.git.GitHelper;
-import org.meveo.service.git.GitRepositoryService;
 import org.meveo.service.git.MeveoRepository;
-import org.meveo.service.script.MavenDependencyService;
-import org.meveo.service.script.ScriptInstanceService;
 import org.meveo.service.storage.RemoteRepositoryService;
 import org.meveo.util.Version;
 import org.slf4j.Logger;
@@ -90,12 +82,18 @@ import org.slf4j.Logger;
  * @version 6.9.0
  */
 @Singleton
+@TransactionManagement(TransactionManagementType.BEAN)
 public class MavenConfigurationService implements Serializable {
 
 	private static final long serialVersionUID = 7814020640577283116L;
     private final static String M2_DIR = "/.m2";
 
-	private static Map<String, ChangeBuffer> buffers = new HashMap<>();
+	private static List<MavenDependency> createdBuffer = new ArrayList<>();
+	private static List<MavenDependency> updatedBuffer = new ArrayList<>();
+	private static List<MavenDependency> deletedBuffer = new ArrayList<>();
+
+	@Resource
+	private UserTransaction transaction;
 
 	@Inject
 	@MeveoRepository
@@ -114,9 +112,6 @@ public class MavenConfigurationService implements Serializable {
 
 	@Inject
 	private GitClient gitClient;
-	
-	@Inject
-	private GitRepositoryService gitRepositoryService;
 
 	@Inject
 	private Logger log;
@@ -129,12 +124,6 @@ public class MavenConfigurationService implements Serializable {
 	
 	@Inject
 	private CurrentUserProvider currentUserProvider;
-	
-	@Inject
-	private MavenDependencyService mavenDependencyService;
-	
-	@Inject
-	private ScriptInstanceService scriptInstanceService;
 
 	private javax.ejb.Timer ejbTimer;
 
@@ -146,7 +135,7 @@ public class MavenConfigurationService implements Serializable {
      *         user's provider
      */
     public static String getM2Directory(MeveoUser currentUser) {
-        String rootDir = ParamBean.getInstance().getChrootDir(currentUser == null ? null : currentUser.getProviderCode());
+        String rootDir = ParamBean.getInstance().getChrootDir(currentUser.getProviderCode());
         String m2 = rootDir + M2_DIR;
         File m2Folder = new File(m2);
         if (!m2Folder.exists()) {
@@ -155,48 +144,24 @@ public class MavenConfigurationService implements Serializable {
         return m2;
     }
 
-	public void onDependencyCreated(@Observes @Created MavenDependency d) {
-		d.getScriptInstances()
-			.stream()
-				.map(scriptInstanceService::findModuleOf)
-				.filter(Objects::nonNull)
-				.forEach(module -> {
-					buffers.computeIfAbsent(module.getCode(), key -> new ChangeBuffer())
-						.getCreatedBuffer()
-						.add(d);
-					schedulePomGeneration();
-				});
+	public void onDependencyCreated(@Observes(during = TransactionPhase.AFTER_SUCCESS) @Created MavenDependency d) {
+		createdBuffer.add(d);
+		schedulePomGeneration();
 	}
 
-	public void onDependencyUpdated(@Observes @Updated MavenDependency d) {
-		d.getScriptInstances()
-			.stream()
-				.map(scriptInstanceService::findModuleOf)
-				.filter(Objects::nonNull)
-				.forEach(module -> {
-					buffers.computeIfAbsent(module.getCode(), key -> new ChangeBuffer())
-						.getUpdatedBuffer()
-						.add(d);
-					schedulePomGeneration();
-				});
+	public void onDependencyUpdated(@Observes(during = TransactionPhase.AFTER_SUCCESS) @Updated MavenDependency d) {
+		log.debug("[CDI event] on dependency update with id={}", d.getArtifactId());
+		if (!createdBuffer.contains(d)) {
+			updatedBuffer.add(d);
+		}
+		schedulePomGeneration();
 	}
 
-	public void onDependencyRemoved(MavenDependency d, ScriptInstance script) {
-		Optional.ofNullable(script)
-			.map(scriptInstanceService::findModuleOf)
-			.filter(Objects::nonNull)
-			.ifPresent(module -> {
-				buffers.computeIfAbsent(module.getCode(), key -> new ChangeBuffer())
-					.getUpdatedBuffer()
-					.remove(d);
-				buffers.computeIfAbsent(module.getCode(), key -> new ChangeBuffer())
-					.getCreatedBuffer()
-					.remove(d);
-				buffers.computeIfAbsent(module.getCode(), key -> new ChangeBuffer())
-					.getDeletedBuffer()
-					.add(d);
-				schedulePomGeneration();
-			});
+	public void onDependencyRemoved(@Observes(during = TransactionPhase.AFTER_COMPLETION) @Removed MavenDependency d) {
+		createdBuffer.remove(d);
+		updatedBuffer.remove(d);
+		deletedBuffer.add(d);
+		schedulePomGeneration();
 	}
 
 	private void schedulePomGeneration() {
@@ -231,79 +196,42 @@ public class MavenConfigurationService implements Serializable {
 				log.debug("Can't parse string to MeveoUser", e);
 				return;
 			}
-			
-			buffers.forEach((moduleCode, buffer) -> {
-				
-				List<String> lines = new ArrayList<>();
 
-				buffer.getCreatedBuffer().forEach(d -> lines.add("Add dependency " + d.getBuiltCoordinates()));
-				buffer.getUpdatedBuffer().forEach(d -> lines.add("Update dependency " + d.getBuiltCoordinates()));
-				buffer.getDeletedBuffer().forEach(d -> lines.add("Delete dependency " + d.getBuiltCoordinates()));
+			List<String> lines = new ArrayList<>();
 
-				StringBuilder message = new StringBuilder();
+			createdBuffer.forEach(d -> lines.add("Add dependency " + d.getBuiltCoordinates()));
+			updatedBuffer.forEach(d -> lines.add("Update dependency " + d.getBuiltCoordinates()));
+			deletedBuffer.forEach(d -> lines.add("Delete dependency " + d.getBuiltCoordinates()));
 
-				// If commit will only contain one change on dependencies, this change will be the header of the commit.
-				// If commit will contains many changes on dependencies, then the header is generic and all changes are detailed in the body.
-				if (lines.size() == 1) {
-					message.append(lines.get(0));
-				} else {
-					message.append("Update pom.xml (").append(lines.size()).append(" modifications) \n");
-					lines.forEach(l -> message.append("\n").append(l));
-				}
+			StringBuilder message = new StringBuilder();
 
-				buffer.getCreatedBuffer().clear();
-				buffer.getUpdatedBuffer().clear();
-				buffer.getDeletedBuffer().clear();
+			// If commit will only contain one change on dependencies, this change will be the header of the commit.
+			// If commit will contains many changes on dependencies, then the header is generic and all changes are detailed in the body.
+			if(lines.size() == 1) {
+				message.append(lines.get(0));
+			} else {
+				message.append("Update pom.xml (").append(lines.size()).append(" modifications) \n");
+				lines.forEach(l -> message.append("\n").append(l));
+			}
 
-				currentUserProvider.reestablishAuthentication(user);
+			createdBuffer.clear();
+			updatedBuffer.clear();
+			deletedBuffer.clear();
 
-				generatePom(message.toString(), moduleCode);
-			});
+			currentUserProvider.reestablishAuthentication(user);
+
+			generatePom(message.toString(), meveoRepository.get());
 		}
 	}
 
-	private void generatePom(String message, String repositoryCode) {
-		
-		GitRepository repository = gitRepositoryService.findByCode(repositoryCode);
-		File gitRepo = GitHelper.getRepositoryDir(currentUser.get(), repositoryCode);
-		Paths.get(gitRepo.getPath(), "facets", "maven").toFile().mkdirs();
-
+	private void generatePom(String message, GitRepository repository) {
 		log.debug("Generating pom.xml file");
 
 		Model model = new Model();
-		model.setGroupId("org.meveo");//TODO: Add group id to module
-		model.setArtifactId(repositoryCode);
+		model.setGroupId("org.meveo");
+		model.setArtifactId("meveo-application");
 		model.setVersion("1.0.0");
 		model.setModelVersion("4.0.0");
-		
-		model.setBuild(new Build());
-		
-		try {
-			// Create symlink for java folder
-			Path javaDir = Paths.get(gitRepo.getPath(), "facets", "java");
-			Path symbolicJavaDir = Paths.get(gitRepo.getPath(), "facets", "maven", "java");
-			Files.createSymbolicLink(symbolicJavaDir, javaDir);
-		} catch (IOException e1) {
-			log.error("Failed to create symbolic link for java source");
-		}
-		
-		// Create .gitignore file
-		Path gitIgnore = Paths.get(gitRepo.getPath(), "facets", "maven", ".gitignore");
-		List<String> ignoredPatterns = List.of(
-				"src/main/java/",
-				"target/"
-			);
-		
-		for (String pattern : ignoredPatterns) {
-			try {
-				Files.write(gitIgnore, 
-						(pattern + "\n").getBytes(), 
-						StandardOpenOption.APPEND, StandardOpenOption.CREATE);
-			} catch (IOException e) {
-				log.error("Failed to write to .gitignore", e);
-			}
-
-		}
 		
 		Properties properties = new Properties();
 		properties.setProperty("maven.compiler.target", "11");
@@ -321,6 +249,7 @@ public class MavenConfigurationService implements Serializable {
 		}
 
 		Repository ownInstance = new Repository();
+		// String contextRoot = ParamBean.getInstance().getProperty("meveo.moduleName", "meveo");
 		String baseUrl = ParamBean.getInstance().getProperty("meveo.admin.baseUrl", "http://localhost:8080/meveo");
 		ownInstance.setId("meveo-repo");
 		if (!baseUrl.endsWith("/")) {
@@ -329,14 +258,6 @@ public class MavenConfigurationService implements Serializable {
 		//ownInstance.setUrl(baseUrl + contextRoot + "/maven");
 		ownInstance.setUrl(baseUrl + "/maven");
 		model.addRepository(ownInstance);
-		
-		Repository githubRepo = new Repository();
-		githubRepo.setId("github");
-		githubRepo.setUrl("https://maven.pkg.github.com/meveo-org/meveo");
-		RepositoryPolicy policy = new RepositoryPolicy();
-		policy.setEnabled(true);
-		githubRepo.setSnapshots(policy);
-		model.addRepository(githubRepo);
 
 		Dependency meveoDependency = new Dependency();
 		meveoDependency.setGroupId("org.meveo");
@@ -347,7 +268,9 @@ public class MavenConfigurationService implements Serializable {
 
 		try {
 
-			mavenDependencyService.findModuleDependencies(repositoryCode)
+			transaction.begin();
+			entityManager.createQuery("SELECT d FROM MavenDependency d", MavenDependency.class)
+					.getResultStream()
 					.forEach(mavenDependency -> {
 						Dependency dependency = new Dependency();
 						dependency.setGroupId(mavenDependency.getGroupId());
@@ -356,21 +279,21 @@ public class MavenConfigurationService implements Serializable {
 						dependency.setScope("provided");
 						model.addDependency(dependency);
 					});
+			transaction.commit();
 
 		} catch (Exception e) {
 			log.error("Error retrieving maven dependencies", e);
 		}
 
 		final File repositoryDir = GitHelper.getRepositoryDir(null, repository.getCode());
-		File pomFile = new File(repositoryDir, "/facets/maven/pom.xml");
+		File pomFile = new File(repositoryDir, "pom.xml");
 
 		try {
-			
 			MavenXpp3Writer xmlWriter = new MavenXpp3Writer();
-			try (FileWriter fileWriter = new FileWriter(pomFile)) {
-				xmlWriter.write(fileWriter, model);
-				gitClient.commitFiles(repository, List.of(pomFile, gitIgnore.toFile()), message);
-			}
+			FileWriter fileWriter = new FileWriter(pomFile);
+			xmlWriter.write(fileWriter, model);
+
+			gitClient.commitFiles(repository, Collections.singletonList(pomFile), message);
 
 		} catch (IOException e) {
 			log.error("Can't write to pom.xml", e);
@@ -383,11 +306,6 @@ public class MavenConfigurationService implements Serializable {
 	public String getM2FolderPath() {
 		MeveoUser meveoUser = currentUser.get();
 		return MavenConfigurationService.getM2Directory(meveoUser);
-	}
-	
-	public String getNodeModulesFolderPath() {
-		String rootDir = ParamBean.getInstance().getChrootDir(null);
-		return rootDir + File.separator + "node_modules";
 	}
 
 	public List<String> getMavenRepositories() {
@@ -586,38 +504,13 @@ public class MavenConfigurationService implements Serializable {
 	 * 
 	 * @param repositoryCode code of the repository
 	 */
-	public void createDefaultPomFile(String repositoryCode) {
+	public void createDefaultPomFile(GitRepository repo) {
 
-		File gitRepo = GitHelper.getRepositoryDir(currentUser.get(), repositoryCode);
-		File pomFile = new File(gitRepo.getPath() + File.separator + "facets" + File.separator + "maven" + File.separator + "pom.xml");
+		File gitRepo = GitHelper.getRepositoryDir(currentUser.get(), repo.getCode());
+		File pomFile = new File(gitRepo.getPath() + File.separator + "pom.xml");
 
 		if (!pomFile.exists()) {
-			generatePom("Initialized default repository", repositoryCode);
+			generatePom("Initialized default repository", repo);
 		}
-	}
-	
-	private static class ChangeBuffer {
-		private List<MavenDependency> createdBuffer = new ArrayList<>();
-		private List<MavenDependency> updatedBuffer = new ArrayList<>();
-		private List<MavenDependency> deletedBuffer = new ArrayList<>();
-		/**
-		 * @return the {@link #createdBuffer}
-		 */
-		public List<MavenDependency> getCreatedBuffer() {
-			return createdBuffer;
-		}
-		/**
-		 * @return the {@link #updatedBuffer}
-		 */
-		public List<MavenDependency> getUpdatedBuffer() {
-			return updatedBuffer;
-		}
-		/**
-		 * @return the {@link #deletedBuffer}
-		 */
-		public List<MavenDependency> getDeletedBuffer() {
-			return deletedBuffer;
-		}
-		
 	}
 }
